--- a/paulhub/templates/pages/google_user_parody.html
+++ b/paulhub/templates/pages/google_user_parody.html
@@ -185,7 +185,7 @@
     </div>
   </div>
 </div><br><br><br><br>
-<script>originalQuote({{ i }})</script>
+<script>originalQuote({{ i }}); translatedQuote({{ i }});</script>
 {% endfor %}
 
 {% endblock content %}
