--- a/paulhub/templates/pages/how_to_furry.html
+++ b/paulhub/templates/pages/how_to_furry.html
@@ -9,7 +9,7 @@
 </style>
 <div class="solo-text">
     <p>
-        Did you ever want to be a furry? Don't worry, that's normal. And there is a wide range of thing you can do to fulfill your dreams!
+        Did you ever want to be a furry? Don't worry, that's normal. And there is a wide range of things you can do to fulfill your dreams!
     </p>
     <ul>
         <li>• Use Linux</li>
